kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apipy-hello-service
spec:
  selector:
    app: apipy-hello
  ports:
    - port: 3000
      targetPort: 5000
