kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apipy-hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: apipy.kube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apipy-hello-service
                port:
                  number: 3000
